# nino-api

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  vcpkg.json
.github/workflows/: fly.yml
Old Rust implementation/: Dockerfile
source/: calendar.cpp  calendar.hpp  http.cpp  http.hpp  last_year.cpp  last_year.hpp  main.cpp
src/: last_year.rs  main.rs
